Added tableofcontent and modified the world and machine phenomena

--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -12,6 +12,9 @@
 \date{release date to be defined}
 \begin{document}
 \maketitle
+\newpage 
+\tableofcontents
+\newpage
 
 \section{Introduction}
 The purpose of this document is to represent the Requirement Analysis and Specification Document (RASD).
@@ -104,15 +107,15 @@ We distinguish the world and the machine. The world is related to every phenomen
 \end{itemize}
  
 \paragraph{Shared phenomena: }
-\subparagraph{From the user point of view}
- \begin{itemize}
+\subparagraph{Shared phenomena controlled by the world and observed by the machine: }
+\begin{itemize}
  	\item The user sends to the system a picture of a            	violation and all the other data relating to it.
  	\item The user sends some data request to the system.
- \end{itemize}
-\subparagraph{From the municipality point of view: }
-\begin{itemize}
-	\item The municipality sends a data request to the system 		  in order to obtain suggestion to improve the safety 		  of the streets.
+	\item The municipality sends a data request to the system 		  in order to receive suggestion to improve the 				  safety 	of the streets.
 	\item The municipality sends a data request to know what 			  are the vehicles that have commited the major 				  number of accidents.
 \end{itemize}
-
+\subparagraph{Shared phenomena controlled by the machine and  			observed by the world: }
+\begin{itemize}
+	\item the user receive data related to what he/she has     	asked
+\end{itemize}
 \end{document}
