--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -133,15 +133,52 @@ We distinguish the world and the machine. The world is related to every phenomen
 \end{itemize}
 
 \subsection{Deﬁnitions, Acronyms, Abbreviations}
-da aggiornare mentre si fa il progetto
-\subsubsection{Acronymis:}
-da fare durante il progetto.
+
+
+
+
+\subsubsection{Acronyms:}
+
+\begin{tabular}{|l|rl|}
+\hline
+
+\textbf{S2B}	& System to be 	&				 			 \\
+\textbf{GDPR}	& General Data Protection Regulation &	     \\
+\textbf{FC}     & Fiscal Code    		&	 				 \\
+\textbf{WP}     & World Phenomena       &	 				 \\
+\textbf{MP}     & Machine Phenomena     &	 				 \\
+\textbf{SP}     & Shared Phenomena      &     				 \\
+\textbf{GPS}    & Global Positioning System &	 			 \\
+
+\hline
+\end{tabular}
+
 \subsubsection{Definitions:}
 da fare durante il progetto.
 \subsubsection{Abbreviations:}
-da fare durante il progetto.
+
+\begin{itemize}
+
+	\item Gn = n-th goal;
+	\item Dn = n-th domain assumption;
+	\item Cn = n-th constraint;
+	\item Rn = n-th requirement;
+	\item MP = Machine Phenomena;
+	\item WP = World Phenomena;
+	\item SP0 = Shared Phenomena that are managed by the Machine but that are observable by the World;
+	\item SP1 = Shared Phenomena that are managed by the World but observable by the Machine.
+
+\end{itemize}
+
+
 \subsection{Revision History: }
-da fare durante il progetto.
+
+\begin{itemize}
+
+	\item Work started 13/10/19;
+
+\end{itemize}
+
 \subsection{Reference Documents:}
 da fare durante il progetto.
 \subsection{Document Structure: }
